# mm

./: .gitignore  CMakeLists.txt  Makefile  README.md  buddy.c  buddy.h  heap_allocator.cpp  heap_allocator_test.cpp  iallocator.cpp  iallocator.h  kr.c  kr.h  mm.c  mm.h  test.c  test_buddy.c  test_kr.c  tester.c  utils.c  utils.h
_examples/cpp/: heap_allocator.cpp  heap_allocator.h  heap_allocator_test.cpp  iallocator.h
_examples/cpp/include/: heap_allocator.h  iallocator.h
_examples/cpp/lib/: heap_allocator.cpp  heap_allocator_test.cpp  heap_buddy_allocator.cpp  iallocator.cpp
include/: buddy.h  mm.h  pool.h  utils.h
lib/: buddy.c  kr.c  pool.c  tester.c  utils.c
scripts/: 3rdparty.sh
src/examples/: CMakeLists.txt
src/examples/cpp/: heap_allocator.h  heap_allocator_test.cpp  heap_buddy_allocator.cpp  iallocator.h
src/modules/memory/: CMakeLists.txt  buddy.c  kr.c  kr.h  mm.h  pool.c  utils.c  utils.h
src/modules/memory/buddy/: buddy.c  buddy.h
src/modules/memory/kr/: kr.c  kr.h
src/modules/memory/pool/: pool.c  pool.h
src/tests/: CMakeLists.txt
src/tests/memory/: test_buddy.c  test_kr.c  test_main.cpp  test_pool.c  tester.c
src/tests/memory/buddy/: test_buddy.cpp
src/tests/memory/kr/: test_kr.cpp
src/tests/memory/pool/: test_pool.cpp
test/: test_buddy.c  test_kr.c  test_pool.c
